--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
+    
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
+  <div class="container">
     <input type="text" id="datetime-picker" />
     <button type="button" data-start>Start</button>
+    <button type="button" data-stop>Reset</button>
 
     <div class="timer">
       <div class="field">
@@ -30,6 +33,7 @@
         <span class="label">Seconds</span>
       </div>
     </div>
+  </div>
 
     <script src="js/02-timer.js" type="module"></script>
   </body>
