--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -11,9 +11,11 @@
     <p><a href="index.html">Go back</a></p>
 
   <div class="container">
-    <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
-    <button type="button" data-stop>Reset</button>
+    <div class="input-container">
+      <input type="text" id="datetime-picker" />
+      <button type="button" data-start>Start</button>
+      <button type="button" data-stop>Reset</button>
+    </div>
 
     <div class="timer">
       <div class="field">
